src/objects/CE_Submission_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Evaluation_Score__c</fullName>
        <label>Evaluation Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Requirement__c</fullName>
        <label>Requirement</label>
        <referenceTo>CE_Requirement__c</referenceTo>
        <relationshipLabel>Submission Requirements</relationshipLabel>
        <relationshipName>Submission_Requirements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Comment__c</fullName>
        <label>Review Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CE_Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>CE_Submission__c</referenceTo>
        <relationshipLabel>Submission Requirements</relationshipLabel>
        <relationshipName>Submission_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Submission Requirement</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Submission Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>